Fix .formatted not existing on java 11